--- a/WhatCanWeCook/WhatCanWeCook/en.lproj/MainStoryboard.storyboard
+++ b/WhatCanWeCook/WhatCanWeCook/en.lproj/MainStoryboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12A269" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="4bc-ca-tnv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C2034" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="4bc-ca-tnv">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -12,7 +12,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="P2b-bC-zaB" kind="relationship" relationship="rootViewController" id="CNy-yC-BCj"/>
+                        <segue destination="Ebc-hd-YPQ" kind="relationship" relationship="rootViewController" id="grV-co-73n"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fG6-GN-Xbz" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,7 +24,7 @@
             <objects>
                 <viewController id="P2b-bC-zaB" customClass="EnterViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wQg-1M-WtZ">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p9L-d6-ftf">
@@ -558,9 +558,7 @@
                             <constraint firstItem="2y3-MX-GTy" firstAttribute="top" secondItem="XOi-ce-WX9" secondAttribute="top" constant="115" type="user" id="Qls-pC-ZUc"/>
                             <constraint firstItem="xRi-wy-OWF" firstAttribute="top" secondItem="XOi-ce-WX9" secondAttribute="top" constant="40" type="user" id="SAy-ET-P1q"/>
                             <constraint firstItem="RFM-mX-L3d" firstAttribute="centerX" secondItem="n2p-fT-g31" secondAttribute="centerX" type="default" id="SeS-Sv-ycw"/>
-                            <constraint firstAttribute="bottom" secondItem="n2p-fT-g31" secondAttribute="bottom" constant="57" type="user" id="Yaa-9o-qHe"/>
                             <constraint firstItem="xRi-wy-OWF" firstAttribute="leading" secondItem="XOi-ce-WX9" secondAttribute="leading" constant="35" type="user" id="cgs-sI-XtV"/>
-                            <constraint firstAttribute="bottom" secondItem="2y3-MX-GTy" secondAttribute="bottom" constant="329" type="user" id="eIc-AD-vvb"/>
                             <constraint firstItem="xTY-W8-rMR" firstAttribute="leading" secondItem="XOi-ce-WX9" secondAttribute="leading" type="default" id="fLh-cA-IYI"/>
                             <constraint firstItem="y74-23-4UP" firstAttribute="trailing" secondItem="2y3-MX-GTy" secondAttribute="trailing" type="user" id="fd9-IN-K3G"/>
                             <constraint firstItem="RFM-mX-L3d" firstAttribute="centerX" secondItem="xTY-W8-rMR" secondAttribute="centerX" type="default" id="lEN-BG-mkL"/>
@@ -773,7 +771,6 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="fkW-7s-dTQ" firstAttribute="centerX" secondItem="mwF-QB-yfH" secondAttribute="centerX" type="default" id="3hn-nG-CZx"/>
-                            <constraint firstAttribute="bottom" secondItem="gjJ-xG-tUt" secondAttribute="bottom" constant="12" type="user" id="3yZ-ri-dJp"/>
                             <constraint firstItem="NRZ-Nz-nIu" firstAttribute="bottom" secondItem="e5N-XY-rHb" secondAttribute="bottom" type="default" id="DxA-Jh-ZVm"/>
                             <constraint firstAttribute="trailing" secondItem="mwF-QB-yfH" secondAttribute="trailing" constant="20" symbolic="YES" type="user" id="Iqi-Pg-fv4"/>
                             <constraint firstItem="mwF-QB-yfH" firstAttribute="top" secondItem="fkW-7s-dTQ" secondAttribute="bottom" constant="1" type="user" id="Ukg-Kl-oBA"/>
@@ -902,7 +899,6 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Ayo-vw-Yge" firstAttribute="centerY" secondItem="ePI-lk-0BP" secondAttribute="centerY" type="user" id="0Hw-qk-WLQ"/>
                             <constraint firstAttribute="trailing" secondItem="JNh-aT-AdZ" secondAttribute="trailing" constant="20" symbolic="YES" type="user" id="55z-J2-q7M"/>
                             <constraint firstItem="1F3-NG-WI4" firstAttribute="trailing" secondItem="ePI-lk-0BP" secondAttribute="trailing" type="default" id="8Ga-v6-3dr"/>
                             <constraint firstItem="qJU-et-tPp" firstAttribute="centerY" secondItem="1F3-NG-WI4" secondAttribute="centerY" type="default" id="E6B-BH-quA"/>
@@ -1062,7 +1058,7 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
             <objects>
                 <viewController id="Ebc-hd-YPQ" customClass="MenuViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="773-Zb-K6h">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IbF-CZ-aic">
@@ -1134,17 +1130,24 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="vwq-qV-rf7"/>
+                    <connections>
+                        <outlet property="tableView" destination="720-Yu-N1T" id="c5S-LJ-9XK"/>
+                        <segue destination="P2b-bC-zaB" kind="push" identifier="SegueEnterIngredient" id="zhw-YP-95U"/>
+                        <segue destination="3Cg-C8-Kgf" kind="push" identifier="SegueResultScreen" id="sap-BA-guA"/>
+                        <segue destination="ZEL-9g-xGF" kind="push" identifier="SegueRecipeScreen" id="gq7-mc-3o3"/>
+                        <segue destination="uKp-lu-SV7" kind="push" identifier="SegueAddRecipeScreen" id="WAC-VD-TbM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yi4-Sh-AcK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="334" y="482"/>
+            <point key="canvasLocation" x="862" y="-1388"/>
         </scene>
         <!--Psample - Results-->
         <scene sceneID="nO9-k1-YdR">
             <objects>
                 <tableViewController id="3Cg-C8-Kgf" customClass="Psample" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="ZtC-4d-lPg">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <sections>
@@ -1771,6 +1774,9 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
         </class>
         <class className="MenuViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MenuViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
         </class>
         <class className="MissingViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MissingViewController.h"/>
@@ -1805,7 +1811,6 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
         <class className="RatingViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/RatingViewController.h"/>
             <relationships>
-                <relationship kind="action" name="tapHideKeyBoard:"/>
                 <relationship kind="outlet" name="commentTextView" candidateClass="UITextView"/>
                 <relationship kind="outlet" name="starRatingView" candidateClass="RatingView"/>
             </relationships>
@@ -1829,7 +1834,9 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="aIc-V8-Hg6"/>
-        <segue reference="CNy-yC-BCj"/>
+        <segue reference="gq7-mc-3o3"/>
+        <segue reference="WAC-VD-TbM"/>
+        <segue reference="sap-BA-guA"/>
+        <segue reference="zhw-YP-95U"/>
     </inferredMetricsTieBreakers>
 </document>
