--- a/WhatCanWeCook/WhatCanWeCook/en.lproj/MainStoryboard.storyboard
+++ b/WhatCanWeCook/WhatCanWeCook/en.lproj/MainStoryboard.storyboard
@@ -725,6 +725,14 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NRZ-Nz-nIu">
                                 <items/>
                             </toolbar>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="What Can We Cook?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zjt-EF-OOh">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="gGS-Rq-oNY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="23"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="What Can We Cook?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gjJ-xG-tUt">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="240" id="2aC-DP-4PU"/>
@@ -751,9 +759,8 @@
                                     <bool key="isElement" value="NO"/>
                                 </accessibility>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="409" type="user" id="6GH-3i-Rqv"/>
                                     <constraint firstAttribute="width" constant="280" type="user" id="Gds-yv-Y4Y"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="288" type="user" id="lqW-9B-ex8"/>
+                                    <constraint firstAttribute="height" constant="371" type="user" id="mbM-xX-VHl"/>
                                 </constraints>
                                 <string key="text">Whisk the lime, oil, garlic, salt and pepper until combined in a small bowl. Place the chicken in a 1-gallon plastic bag. Pour half of the lime mixture over the chicken; turn to coat. Let the chicken marinate in the fridge for at least 2 hours and up to 8 hours.
 
@@ -770,16 +777,20 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="mwF-QB-yfH" firstAttribute="top" secondItem="e5N-XY-rHb" secondAttribute="top" constant="66" type="user" id="1Zr-wH-6Hd"/>
                             <constraint firstItem="fkW-7s-dTQ" firstAttribute="centerX" secondItem="mwF-QB-yfH" secondAttribute="centerX" type="default" id="3hn-nG-CZx"/>
+                            <constraint firstAttribute="bottom" secondItem="mwF-QB-yfH" secondAttribute="bottom" constant="67" type="user" id="9LJ-8P-SPu"/>
+                            <constraint firstItem="fkW-7s-dTQ" firstAttribute="top" secondItem="e5N-XY-rHb" secondAttribute="top" type="default" id="BXV-63-puP"/>
                             <constraint firstItem="NRZ-Nz-nIu" firstAttribute="bottom" secondItem="e5N-XY-rHb" secondAttribute="bottom" type="default" id="DxA-Jh-ZVm"/>
+                            <constraint firstItem="zjt-EF-OOh" firstAttribute="centerX" secondItem="gjJ-xG-tUt" secondAttribute="centerX" type="default" id="Hxs-QG-fgT"/>
                             <constraint firstAttribute="trailing" secondItem="mwF-QB-yfH" secondAttribute="trailing" constant="20" symbolic="YES" type="user" id="Iqi-Pg-fv4"/>
-                            <constraint firstItem="mwF-QB-yfH" firstAttribute="top" secondItem="fkW-7s-dTQ" secondAttribute="bottom" constant="1" type="user" id="Ukg-Kl-oBA"/>
+                            <constraint firstAttribute="bottom" secondItem="zjt-EF-OOh" secondAttribute="bottom" constant="12" id="NQI-8b-nx8"/>
+                            <constraint firstItem="zjt-EF-OOh" firstAttribute="leading" secondItem="e5N-XY-rHb" secondAttribute="leading" type="default" id="PCv-W4-qfX"/>
                             <constraint firstItem="NRZ-Nz-nIu" firstAttribute="trailing" secondItem="e5N-XY-rHb" secondAttribute="trailing" type="default" id="XoX-LK-Yvg"/>
+                            <constraint firstItem="gjJ-xG-tUt" firstAttribute="top" secondItem="e5N-XY-rHb" secondAttribute="top" constant="515" id="cJO-6X-sbz"/>
                             <constraint firstItem="NRZ-Nz-nIu" firstAttribute="leading" secondItem="e5N-XY-rHb" secondAttribute="leading" type="default" id="dd2-AR-MLf"/>
-                            <constraint firstItem="gjJ-xG-tUt" firstAttribute="centerX" secondItem="NRZ-Nz-nIu" secondAttribute="centerX" type="default" id="lRF-Ie-pC3"/>
+                            <constraint firstItem="zjt-EF-OOh" firstAttribute="trailing" secondItem="e5N-XY-rHb" secondAttribute="trailing" type="default" id="jce-po-XIO"/>
                             <constraint firstItem="mwF-QB-yfH" firstAttribute="leading" secondItem="e5N-XY-rHb" secondAttribute="leading" constant="20" symbolic="YES" type="user" id="nq9-Uj-RM0"/>
-                            <constraint firstItem="fkW-7s-dTQ" firstAttribute="top" secondItem="e5N-XY-rHb" secondAttribute="top" constant="20" symbolic="YES" type="user" id="qEU-Jj-vaS"/>
-                            <constraint firstItem="gjJ-xG-tUt" firstAttribute="top" secondItem="mwF-QB-yfH" secondAttribute="bottom" constant="40" type="user" id="qRL-TC-Y3Z"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Directions" id="CdH-sq-4TZ">
@@ -1404,6 +1415,9 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
                                                     <items/>
                                                 </toolbar>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="What Can We Cook?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ImF-Br-FCX">
+                                                    <accessibility key="accessibilityConfiguration">
+                                                        <accessibilityTraits key="traits" none="YES" staticText="YES" notEnabled="YES"/>
+                                                    </accessibility>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="sDL-jh-0YF"/>
                                                     </constraints>
@@ -1502,9 +1516,8 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1X3-IE-c5D">
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="37" type="user" id="6bs-Jt-ntq"/>
                                     <constraint firstAttribute="width" constant="194" type="user" id="TuJ-Xi-yIZ"/>
-                                    <constraint firstAttribute="height" constant="37" id="tcP-hh-UIi"/>
+                                    <constraint firstAttribute="height" constant="37" type="user" id="tcP-hh-UIi"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Directions" backgroundImage="yellow.gif">
@@ -1540,8 +1553,6 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text=" " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="168" translatesAutoresizingMaskIntoConstraints="NO" id="wqG-bX-MoS">
                                 <constraints>
                                     <constraint firstAttribute="height" constant="121" type="user" id="dlz-yj-PJC"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="168" type="user" id="eM0-M7-JpW"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="121" type="user" id="ghv-so-Baq"/>
                                     <constraint firstAttribute="width" constant="168" type="user" id="tEc-Wq-fqv"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
@@ -1609,10 +1620,10 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="1X3-IE-c5D" firstAttribute="leading" secondItem="K9J-ff-Gqn" secondAttribute="leading" constant="68" type="user" id="0Vl-Dd-q7m"/>
                             <constraint firstItem="wqG-bX-MoS" firstAttribute="leading" secondItem="K9J-ff-Gqn" secondAttribute="leading" type="user" id="1nP-Ys-777"/>
                             <constraint firstItem="YmU-fi-tPB" firstAttribute="top" secondItem="sz1-B6-ZLL" secondAttribute="top" type="user" id="3S1-94-3oW"/>
                             <constraint firstItem="hF6-Jf-60T" firstAttribute="leading" secondItem="K9J-ff-Gqn" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="4fg-jt-9iF"/>
-                            <constraint firstItem="2zG-3f-tP5" firstAttribute="top" secondItem="1X3-IE-c5D" secondAttribute="bottom" constant="8" type="user" id="5Vs-dR-NxU"/>
                             <constraint firstItem="hF6-Jf-60T" firstAttribute="top" secondItem="K9J-ff-Gqn" secondAttribute="top" constant="144" type="user" id="7ac-zX-zGh"/>
                             <constraint firstItem="wqG-bX-MoS" firstAttribute="bottom" secondItem="7E5-X7-728" secondAttribute="bottom" type="user" id="88c-7Z-qVR"/>
                             <constraint firstItem="2zG-3f-tP5" firstAttribute="centerX" secondItem="uPC-bk-imS" secondAttribute="centerX" type="default" id="AbE-Q8-xSt"/>
@@ -1620,17 +1631,15 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
                             <constraint firstItem="eNH-fw-oAM" firstAttribute="trailing" secondItem="K9J-ff-Gqn" secondAttribute="trailing" type="default" id="CiF-yt-04r"/>
                             <constraint firstAttribute="bottom" secondItem="2zG-3f-tP5" secondAttribute="bottom" constant="128" type="user" id="Cmk-kr-sMe"/>
                             <constraint firstItem="7E5-X7-728" firstAttribute="top" secondItem="K9J-ff-Gqn" secondAttribute="top" type="user" id="DTa-6a-5H4"/>
-                            <constraint firstItem="ttE-wN-vAF" firstAttribute="bottom" secondItem="GQ3-hH-2jV" secondAttribute="bottom" type="user" id="FGH-0W-i2W"/>
+                            <constraint firstItem="GQ3-hH-2jV" firstAttribute="top" secondItem="ttE-wN-vAF" secondAttribute="top" type="user" id="GeF-jF-kQ2"/>
                             <constraint firstAttribute="bottom" secondItem="sz1-B6-ZLL" secondAttribute="bottom" constant="77" type="user" id="I8z-uB-XYt"/>
                             <constraint firstAttribute="trailing" secondItem="GQ3-hH-2jV" secondAttribute="trailing" constant="19" type="user" id="MPf-PT-0g3"/>
                             <constraint firstItem="ttE-wN-vAF" firstAttribute="top" secondItem="hF6-Jf-60T" secondAttribute="bottom" constant="3" type="user" id="RgH-mf-TR3"/>
-                            <constraint firstItem="GQ3-hH-2jV" firstAttribute="leading" secondItem="ttE-wN-vAF" secondAttribute="trailing" constant="60" type="user" id="U2S-Vq-F5M"/>
                             <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="2zG-3f-tP5" secondAttribute="bottom" constant="128" type="user" id="UMF-m5-yy5"/>
                             <constraint firstItem="2zG-3f-tP5" firstAttribute="top" secondItem="1X3-IE-c5D" secondAttribute="bottom" constant="8" symbolic="YES" type="user" id="V25-5Y-Nzx"/>
                             <constraint firstItem="ttE-wN-vAF" firstAttribute="top" secondItem="K9J-ff-Gqn" secondAttribute="top" constant="168" type="user" id="WvP-sH-c9u"/>
                             <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="sz1-B6-ZLL" secondAttribute="bottom" constant="77" type="user" id="YBd-Pk-5CS"/>
-                            <constraint firstItem="GQ3-hH-2jV" firstAttribute="leading" secondItem="K9J-ff-Gqn" secondAttribute="leading" constant="187" type="user" id="You-sv-mgW"/>
-                            <constraint firstItem="YmU-fi-tPB" firstAttribute="leading" secondItem="7E5-X7-728" secondAttribute="leading" type="default" id="a9F-HF-61K"/>
+                            <constraint firstItem="YmU-fi-tPB" firstAttribute="leading" secondItem="7E5-X7-728" secondAttribute="leading" type="user" id="a9F-HF-61K"/>
                             <constraint firstItem="wqG-bX-MoS" firstAttribute="top" secondItem="K9J-ff-Gqn" secondAttribute="top" type="user" id="ap1-QQ-9tN"/>
                             <constraint firstItem="YmU-fi-tPB" firstAttribute="trailing" secondItem="1X3-IE-c5D" secondAttribute="trailing" type="user" id="asa-Vm-MAh"/>
                             <constraint firstItem="uPC-bk-imS" firstAttribute="leading" secondItem="K9J-ff-Gqn" secondAttribute="leading" type="default" id="b5y-yd-zVt"/>
@@ -1639,12 +1648,14 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
                             <constraint firstAttribute="bottom" secondItem="YmU-fi-tPB" secondAttribute="bottom" constant="77" type="user" id="bzd-o3-Y2q"/>
                             <constraint firstItem="7E5-X7-728" firstAttribute="leading" secondItem="wqG-bX-MoS" secondAttribute="trailing" type="user" id="cop-4v-XVb"/>
                             <constraint firstItem="7E5-X7-728" firstAttribute="trailing" secondItem="K9J-ff-Gqn" secondAttribute="trailing" type="user" id="cva-g3-beR"/>
+                            <constraint firstItem="ttE-wN-vAF" firstAttribute="top" secondItem="wqG-bX-MoS" secondAttribute="bottom" constant="47" type="user" id="gnW-0C-ieL"/>
                             <constraint firstItem="YmU-fi-tPB" firstAttribute="leading" secondItem="sz1-B6-ZLL" secondAttribute="trailing" constant="8" symbolic="YES" type="user" id="hRS-wf-QjQ"/>
-                            <constraint firstItem="GQ3-hH-2jV" firstAttribute="top" secondItem="ttE-wN-vAF" secondAttribute="top" type="user" id="m0Q-YN-biq"/>
                             <constraint firstItem="sz1-B6-ZLL" firstAttribute="leading" secondItem="1X3-IE-c5D" secondAttribute="leading" type="user" id="nAB-gI-nY7"/>
                             <constraint firstItem="GQ3-hH-2jV" firstAttribute="centerX" secondItem="7E5-X7-728" secondAttribute="centerX" type="user" id="qGY-gK-FCv"/>
+                            <constraint firstAttribute="trailing" secondItem="1X3-IE-c5D" secondAttribute="trailing" constant="58" type="user" id="t8t-RF-JwU"/>
                             <constraint firstItem="YmU-fi-tPB" firstAttribute="leading" secondItem="sz1-B6-ZLL" secondAttribute="trailing" constant="8" type="user" id="tzb-Gw-sy4"/>
                             <constraint firstItem="ttE-wN-vAF" firstAttribute="leading" secondItem="K9J-ff-Gqn" secondAttribute="leading" constant="20" symbolic="YES" type="user" id="unc-9Y-TB3"/>
+                            <constraint firstItem="GQ3-hH-2jV" firstAttribute="baseline" secondItem="ttE-wN-vAF" secondAttribute="baseline" type="user" id="wc4-tf-38X"/>
                             <constraint firstItem="uPC-bk-imS" firstAttribute="trailing" secondItem="K9J-ff-Gqn" secondAttribute="trailing" type="default" id="x6H-Jb-0bj"/>
                             <constraint firstItem="sz1-B6-ZLL" firstAttribute="bottom" secondItem="YmU-fi-tPB" secondAttribute="bottom" type="user" id="xky-dV-H5N"/>
                             <constraint firstItem="eNH-fw-oAM" firstAttribute="bottom" secondItem="K9J-ff-Gqn" secondAttribute="bottom" type="default" id="zI5-7g-qsH"/>
@@ -1834,9 +1845,9 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
+        <segue reference="aIc-V8-Hg6"/>
         <segue reference="sap-BA-guA"/>
         <segue reference="WAC-VD-TbM"/>
-        <segue reference="aIc-V8-Hg6"/>
         <segue reference="9gs-bQ-JUX"/>
     </inferredMetricsTieBreakers>
 </document>
